--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
   --black-text-color: #000000;
   --link-footer-text-color: rgba(255, 255, 255, 0.6);
   --accent-color: #2196f3;
-  --primary-background-color: #e5e5e5;
+  --primary-background-color: #ffffff;
   --secondary-background-color: #f5f4fa;
   --header-background-color: #ffffff;
   --footer-background-color: #2f303a;
